fix image overflow on single staff post type

--- a/web/wp-content/themes/onelove/assets/scss/_main.scss
+++ b/web/wp-content/themes/onelove/assets/scss/_main.scss
@@ -386,6 +386,11 @@ textarea {
 .single-staff_post_type #featured-hero {
   background-position: 15% 15%;
 }
+.single-staff_post_type {
+  #footer-container {
+    border-top: 0;
+  }
+}
 
 // 5. Slider
 // ---------
